--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
     implementation 'io.paperdb:paperdb:2.6'//Paper lib dependency
-    //implementation 'com.google.android.gms:play-services-ads:19.1.0'//Admob dependency
+    implementation 'com.google.android.gms:play-services-ads:19.1.0'//Admob dependency
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
